报告管理功能开发

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -100,7 +100,7 @@
             opt.url = "/lb/0809";
         } else if(type==2){
             opt.title="报告管理";
-            opt.url = "/bg/query";
+            opt.url = "/report/query";
         } else if(type==3){
             opt.title="档案查询";
             opt.url = "/archMgr";
