档案功能开发

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -11,7 +11,8 @@
     <meta http-equiv="pragma" content="no-cache" />
     <meta http-equiv="cache-control" content="no-cache" />
     <meta http-equiv="expires" content="0" />
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon"/>    <th:block th:replace="common/res::res"></th:block>
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon"/>
+    <th:block th:replace="common/res::res"></th:block>
 
     <style>
         *{font-size:12px}
@@ -103,7 +104,7 @@
             opt.url = "/report/query";
         } else if(type==3){
             opt.title="档案查询";
-            opt.url = "/archMgr";
+            opt.url = "/arch";
         } else if(type==4){
             opt.title="用户管理";
             opt.url = "/lbDoctorMgr";
