--- a/src/main/resources/templates/report/0809-report.html
+++ b/src/main/resources/templates/report/0809-report.html
@@ -149,10 +149,10 @@
                 <em class="iconfont icon-dayin"></em>
                 <i>打印报告</i>
             </a>
-            <a href="javascript:void(0)" onClick="exportPDF();">
-                <em class="iconfont icon-pdf"></em>
-                <i>导出PDF</i>
-            </a>
+<!--            <a href="javascript:void(0)" onClick="exportPDF();">-->
+<!--                <em class="iconfont icon-pdf"></em>-->
+<!--                <i>导出PDF</i>-->
+<!--            </a>-->
         </div>
     </div>
 </div>
