--- a/src/main/resources/templates/report/query.html
+++ b/src/main/resources/templates/report/query.html
@@ -19,7 +19,7 @@
 	<div class="r-min-width">
 		<form id="tb">
 		<div class="ui-gauge">
-			<div class="ui-help">帮助</div>
+<!--			<div class="ui-help">帮助</div>-->
 			<ul>
 				<li style="height:30px;display:none" id="state">
 					<div class="ui-state" style="position: absolute;left: 90px;">
@@ -52,7 +52,7 @@
 			<ol class="clear" id="screeningMore">
 				<li class="col3">
 					<em>手机号码&nbsp;</em>
-					<input type="text" name="CPhoneNo" class="easyui-validatebox" data-options="validType:'isPhoneNo'" />
+					<input type="text" name="CPhoneNo" class="easyui-validatebox" data-options="" />
 				</li>
 				<li class="col3">
 					<em>姓名&nbsp;</em>
@@ -101,7 +101,7 @@
 					<em class="iconfont icon-delete"></em>
 					<i>清空</i>
 				</a>
-				<span style="height:14px;line-height:33px;color:blue;">展开条件，选择测评时间范围，默认查询当天</span>
+				<span style="height:14px;line-height:33px;color:blue;">展开条件，选择测评时间范围，默认查询当月报告</span>
 			</div>
 		</div>
 		</form>
@@ -110,16 +110,15 @@
 		        <tr>
 		            <th field="CPkId" data-options="hidden:true">主键</th>
 		            <th field="CLbId" data-options="hidden:true">量表id</th>
-		            <th field="CState" data-options="hidden:true">量表状态</th>
-		            <th field="CPhoneNo" data-options="hidden:true">电话</th>
-		            <th field="CState" data-options="hidden:true">状态</th>
 		            <th field="CChildNme" style='width:15%'>姓名</th>
 		            <th field="CChildSex" style='width:10%' data-options="formatter:formatSex1">性别</th>
-		            <th field="TBirthday" style='width:15%'>出生日期</th>
-		            <th field="CAns8" style='width:30%' data-options="formatter:formatResult">结论</th>
+		            <th field="TBirthday" style='width:10%'>出生日期</th>
+					<th field="CPhoneNo" style='width:10%'>电话</th>
+					<th field="CMenzhenNo" width="10%">门诊/住院号</th>
+		            <th field="CAns8" style='width:20%' data-options="formatter:formatResult">结论</th>
 		            <th field="TTestTm" style='width:15%'>测评时间</th>
 <!--		            <th field="CLbIdNme" style='width:30%'>量表名称</th>-->
-		            <th field="CEffMrk" style='width:14%' data-options="formatter:formatState">状态</th>
+		            <th field="CEffMrk" style='width:10%' data-options="formatter:formatState">状态</th>
 		        </tr>
 		    </thead>
 		</table>
@@ -129,8 +128,6 @@
 		    <!-- 作废，还原，删除 -->
 		    <a href="javascript:invalidReport()" class="iconfont icon-zuofei" title="">作废</a>
 		    <a href="javascript:recoverReport()" class="iconfont icon-huifu" title="">恢复</a>
-		    <a href="javascript:deleteQuest()" class="iconfont icon-del" title="未产生报告可删除，若已生成报告则只能作废">删除</a>
-
 		</div>
 	</div>
 	
@@ -138,356 +135,216 @@
 	
     var now = new Date(utils.SYS_DATE);
     
-			$(document).ready(function(){
-			    $("#CChildSex").combobox("setValue","");
-				//初始化使用帮助页面
-				utils.initHelpWindow(true);
-				//对datagrid设置属性，必须在initDataGrind之前，否则分页失效，暂未查出问题
-				$("#query").datagrid({
-					onDblClickRow:function(index,row){
-						var state = row.CState;//1已出报告 0未出报告
-						if(state=='0'||state=='3'|| state=='4'){
-							quest();
-						}else if(state=='1'||state=='2'){//作废，还原，删除
-							report();
-						}
-					}
-				});
-				utils.initDataGrid();
+	$(document).ready(function(){
+		$("#CChildSex").combobox("setValue","");
+		//初始化使用帮助页面
+		utils.initHelpWindow(true);
+		//对datagrid设置属性，必须在initDataGrind之前，否则分页失效，暂未查出问题
+		$("#query").datagrid({
+			onDblClickRow:function(index,row){
+				report();
+			}
+		});
+		utils.initDataGrid();
 
-				// 当天
-	            $("#TBgnTm").datebox("setValue", now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate());
-	            $("#TEndTm").datebox("setValue", now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate());
-				query();
-				
-				utils.closeLoading();
+		// 当天
+		$("#TBgnTm").datebox("setValue", now.getFullYear() + "-" + (now.getMonth()) + "-" + now.getDate());
+		$("#TEndTm").datebox("setValue", now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate());
+		query();
+
+		utils.closeLoading();
+	});
+
+
+	//点击显示隐藏筛选条件
+	//***************************************************************************************
+	//*****注意：由于form表单的结构不一样，量表的查询和（听力筛查、体格检查）的该方法不一样123************
+	//***************************************************************************************
+	function screeningMore(obj){
+		var maxHeight=122;//展开的高度
+		var minHeight=38;//收缩的高度
+		var delay = 300;
+		if($("#screeningMore").css("height")==(minHeight+"px")){
+			$("#screeningMore").animate({"height":maxHeight+"px"},delay);
+			$(obj).find("span").text("收起");
+			$(obj).find("i").css({"transform":"rotate(180deg)","-webkit-transform":"rotate(180deg)"});
+			$("#state").show(delay);
+
+			$(".datagrid-view").animate({"height":$(".datagrid-view").height()-maxHeight},delay);
+			$(".datagrid-body").animate({"height":$(".datagrid-body").height()-maxHeight},delay);
+
+		}else{
+			$("#screeningMore").animate({"height":minHeight+"px"},delay);
+			$(obj).find("span").text("展开");
+			$(obj).find("i").css({"transform":"rotate(360deg)","-webkit-transform":"rotate(360deg)"});
+			$("#state").hide(delay);
+
+			$(".datagrid-view").animate({"height":$(".datagrid-view").height()+maxHeight},delay);
+			$(".datagrid-body").animate({"height":$(".datagrid-body").height()+maxHeight},delay);
+		}
+	}
+
+	//清空查询条件
+	function clearForm(){
+		$("#tb").form("clear");
+		$(".gauge-content").find("div.ui-gauge-box").html("");
+		$("#CState0").prop("checked",true);
+		$("#CState1").prop("checked",true);
+		$("#queryAllSpan").html("(默认查询全部)");
+		$("#queryAllSpan").parent().css("width","130px");
+		$("#queryAllSpan").parent().next().css("left","300px");
+		$(".gauge-content").hide();
+
+	}
+
+	function query(){
+		var state0 = $("#CState0").is(":checked");
+		var state1 = $("#CState1").is(":checked");
+		//作废，还原，删除
+		var state2 = $("#CState2").is(":checked");
+		if(!state0 && !state1 && !state2){
+			utils.alert("请选择报告状态",function(){
+				return false;
 			});
+			return ;
+		}
+		//判断出生日期结束时间不能在开始时间之前
+		var TBirthBgn = new Date($("#TBirthBgn").datebox("getValue"));//转换为开始时间
+		//var TBirthEnd = new Date($("#TBirthEnd").datebox("getValue"));//转换为结束时间
+		// if(TBirthBgn.getTime()>TBirthEnd.getTime()){
+		// 	utils.alert("出生日期结束时间不能在开始时间之前");
+		// 	return false;
+		// }
+		var TBgnTm= new Date($("#TBgnTm").datebox("getValue"));//转换为开始时间
+		var TEndTm = new Date($("#TEndTm").datebox("getValue"));//转换为结束时间
+		if(TBgnTm.getTime()>TEndTm.getTime()){
+			utils.alert("测评时间结束时间不能在开始时间之前");
+			return false;
+		}
+		//作废，还原，删除
+		var params = {"state0":state0,"state1":state1,"state2":state2};
 
-
-			//点击显示隐藏筛选条件
-			//***************************************************************************************
-			//*****注意：由于form表单的结构不一样，量表的查询和（听力筛查、体格检查）的该方法不一样123************
-			//***************************************************************************************
-			function screeningMore(obj){
-				var maxHeight=122;//展开的高度
-				var minHeight=38;//收缩的高度
-				var delay = 300;
-				if($("#screeningMore").css("height")==(minHeight+"px")){
-					$("#screeningMore").animate({"height":maxHeight+"px"},delay);
-					$(obj).find("span").text("收起");
-					$(obj).find("i").css({"transform":"rotate(180deg)","-webkit-transform":"rotate(180deg)"});
-					$("#state").show(delay);
-
-					$(".datagrid-view").animate({"height":$(".datagrid-view").height()-maxHeight},delay);
-					$(".datagrid-body").animate({"height":$(".datagrid-body").height()-maxHeight},delay);
-
+		utils.ajax({
+			control:"report/list",
+			method:"query",
+			params:params,
+			forms:["tb"],
+			validate:true,
+			sucFun:function(mrk,bd,cd){
+				if(mrk){
+					// utils.showMsg("查询成功");
 				}else{
-					$("#screeningMore").animate({"height":minHeight+"px"},delay);
-					$(obj).find("span").text("展开");
-					$(obj).find("i").css({"transform":"rotate(360deg)","-webkit-transform":"rotate(360deg)"});
-					$("#state").hide(delay);
-
-					$(".datagrid-view").animate({"height":$(".datagrid-view").height()+maxHeight},delay);
-					$(".datagrid-body").animate({"height":$(".datagrid-body").height()+maxHeight},delay);
+					utils.showMsg("查询失败");
 				}
 			}
+		});
+	}
 
-			//清空查询条件
-			function clearForm(){
-				$("#tb").form("clear");
-				$(".gauge-content").find("div.ui-gauge-box").html("");
-				$("#CState0").prop("checked",true);
-				$("#CState1").prop("checked",true);
-				$("#queryAllSpan").html("(默认查询全部)");
-				$("#queryAllSpan").parent().css("width","130px");
-				$("#queryAllSpan").parent().next().css("left","300px");
-				$(".gauge-content").hide();
+	function formatSex1(value,row,index){
+		if("F"==value)
+			return "女";
+		else
+			return "男";
+	}
 
-			}
+	function formatResult(value,row,index){
+		return '<span>' + row.CAns7 +'</span>注意力<span>'+ row.CAns8 +'</span>障碍';
+	}
 
-			function query(){
-				var state0 = $("#CState0").is(":checked");
-				var state1 = $("#CState1").is(":checked");
-				//作废，还原，删除
-				var state2 = $("#CState2").is(":checked");
-				if(!state0 && !state1 && !state2){
-					utils.alert("请选择报告状态",function(){
-						return false;
-					});
-				}
-				//判断出生日期结束时间不能在开始时间之前
-				var TBirthBgn = new Date($("#TBirthBgn").datebox("getValue"));//转换为开始时间
-				//var TBirthEnd = new Date($("#TBirthEnd").datebox("getValue"));//转换为结束时间
-				// if(TBirthBgn.getTime()>TBirthEnd.getTime()){
-				// 	utils.alert("出生日期结束时间不能在开始时间之前");
-				// 	return false;
-				// }
-				var TBgnTm= new Date($("#TBgnTm").datebox("getValue"));//转换为开始时间
-				var TEndTm = new Date($("#TEndTm").datebox("getValue"));//转换为结束时间
-				if(TBgnTm.getTime()>TEndTm.getTime()){
-					utils.alert("测评时间结束时间不能在开始时间之前");
-					return false;
-				}
-				//作废，还原，删除
-				var params = {"state0":state0,"state1":state1,"state2":state2};
-
-				utils.ajax({
-					control:"report/list",
-					method:"query",
-					params:params,
-					forms:["tb"],
-					validate:true,
-					sucFun:function(mrk,bd,cd){
-						if(mrk){
-							// utils.showMsg("查询成功");
-						}else{
-							utils.showMsg("查询失败");
-						}
-					}
-				});
-			}
-
-			function formatSex1(value,row,index){
-				if("F"==value)
-					return "女";
-				else
-					return "男";
-			}
-
-			function formatResult(value,row,index){
-				return '<span>' + row.CAns7 +'</span>注意力<span>'+ row.CAns8 +'</span>障碍';
-			}
-
-			function formatState(value,row,index){
-				//是否有效（0已作废，1有效）
-				if("1"==value)
-					return "<span style='color:green'>已出报告</span>";
-				else if("0"==value)
-					return "<span style='color:red'>已作废</span>";
-			}
-
-			function quest(){
-				var row = $("#query").datagrid('getSelected');
-				if(!row){
-				 	$.messager.alert('提示','请选择一条记录');
-				 	return;
-				 }else{
-			 		var pkId = row.CPkId;
-			 		var lbId = row.CLbId;
-			 	if(row.CState=="1" || row.CState=="2"||row.CState=="3"){//作废，还原，删除
-			 		var url = +"/jsp/lb/" +lbId+".jsp?pkId="+pkId+"&model=view";
-			 		var title = row.CChildNme;
-			 		parent.utils.addTab({
-			 			"url":url,
-						"title":title
-			 		});
-			 	}else{
-			 		var url = "/jsp/lb/" +lbId+".jsp?pkId="+pkId+"&model=";
-			 		if(row.CState=="4"){
-			 			url+="modify";
-			 		}else{
-			 			url+="edit";
-			 		}
-			 		var title = row.CChildNme;
-			 		parent.utils.addTab({
-			 			"url":url,
-						"title":title
-			 		});
-			 	}
-			 }
+	function formatState(value,row,index){
+			//是否有效（0已作废，1有效）
+			if("1"==value)
+				return "<span style='color:green'>已出报告</span>";
+			else if("2"==value)
+				return "<span style='color:red'>已作废</span>";
 		}
 
-		function report(){
-			var row = $("#query").datagrid('getSelected');
-			if(!row) {
-				$.messager.alert('提示', '请选择一条记录');
+	function report(){
+		var row = $("#query").datagrid('getSelected');
+		if(!row) {
+			$.messager.alert('提示', '请选择一条记录');
+			return;
+		}
+		var pkId = row.CPkId;
+		var lbId = row.CLbId;
+		var url = "/report/0809?pkId="+pkId;
+		var title = row.CChildNme;
+		parent.utils.addTab({
+			"url":url,
+			"title":title+"报告"
+		});
+	}
+	//作废报告
+	function invalidReport(){
+		var row = $("#query").datagrid('getSelected');
+		if(!row){
+			$.messager.alert('提示','请选择一条记录');
+			return;
+		 }
+		var pkId = row.CPkId;
+		var lbId = row.CLbId;
+		var state = row.CEffMrk;
+		if(row.CEffMrk=="2"){
+			$.messager.alert('提示','报告已作废');
+			return ;
+		}
+		$.messager.confirm('确认?','是否确认作废',function(r){
+			if(!r)
 				return;
+			utils.ajax({
+				control:"report/disable",
+				method:"invalidReport",
+				params:{
+					pkId:pkId
+				},
+				sucFun:function(mrk,bd,cd){
+					if(mrk){
+						utils.showMsg("作废成功");
+
+						row.CEffMrk = "2";
+						var rowIndex = $('#query').datagrid('getRowIndex', row);
+						$('#query').datagrid('refreshRow',rowIndex);
+					}
+				}
+			});
+		});
+	}
+	//恢复报告
+	function recoverReport(){
+			var row = $("#query").datagrid('getSelected');
+			if(!row){
+			 	$.messager.alert('提示','请选择一条记录');
+			 	return;
 			}
 			var pkId = row.CPkId;
 			var lbId = row.CLbId;
-			var url = "/report/0809?pkId="+pkId;
-			var title = row.CChildNme;
-			parent.utils.addTab({
-				"url":url,
-				"title":title+"报告"
+			var state = row.CEffMrk;
+			if(row.CEffMrk!="2"){
+				$.messager.alert('提示','只能恢复作废的报告');
+				return ;
+			}
+			$.messager.confirm('确认?','是否确认恢复',function(r){
+				if(!r)
+					return;
+				utils.ajax({
+					control:"report/recover",
+					method:"recoverReport",
+					params:{
+						pkId:pkId
+					},
+					sucFun:function(mrk,bd,cd){
+						if(mrk){
+							utils.showMsg("恢复成功");
+							row.CEffMrk = "1";
+							var rowIndex = $('#query').datagrid('getRowIndex', row);
+							$('#query').datagrid('refreshRow',rowIndex);
+						}
+					}
+				});
 			});
 		}
 
-		//量表选择页面点击确认后回填数据
-		function setLbTitle(){
-			//lbIds_=[],kinds_=[],lbNames_=[],kindNames_;
-			//没有选择任何量表 或者 大类
-			if(lbNames_.length==0&&kindNames_.length==0){
-				$("#queryAllSpan").html("(默认查询全部)");
-				$("#queryAllSpan").parent().css("width","130px");
-				$("#queryAllSpan").parent().next().css("left","300px");
-				$(".gauge-content").hide();
-			}else{
-				$("#queryAllSpan").html("");
-				$("#queryAllSpan").parent().css("width","45px");
-				$("#queryAllSpan").parent().next().css("left","205px");
-
-				if(kindNames_.length!=0){
-					var liObj = $(".gauge-content").find("li").eq(0);
-					var divObj = liObj.find("div");
-					divObj.html("");
-					for(var i=0;i<kindNames_.length;i++){
-						divObj.append("<span>"+kindNames_[i]+"</span>");
-					}
-					liObj.show();
-					$(".gauge-content").show();
-				}else{
-					liObj = $(".gauge-content").find("li").eq(0).hide();
-				}
-
-				if(lbNames_.length!=0){
-					var liObj = $(".gauge-content").find("li").eq(1);
-					var divObj = liObj.find("div");
-					divObj.html("");
-					for(var i=0;i<lbNames_.length;i++){
-						divObj.append("<span>"+lbNames_[i]+"</span>");
-					}
-					liObj.show();
-					$(".gauge-content").show();
-				}else{
-					liObj = $(".gauge-content").find("li").eq(1).hide();
-				}
-			}
-		}
-
-
-		//<!-- 作废，还原，删除 -->
-
-		//删除答题
-		function deleteQuest(){
-			var row = $("#query").datagrid('getSelected');
-			if(!row){
-			 	$.messager.alert('提示','请选择一条记录');
-			 	return;
-			 }else{
-		 		var pkId = row.CPkId;
-		 		var lbId = row.CLbId;
-		 		var state = row.CState;
-                   if(row.CState=="3"){
-                       $.messager.alert('提示','报告远程评定中不能删除');
-                       return ;
-                   }else if(row.CState!="0"){
-                       $.messager.alert('提示','报告只能作废，不能删除');
-                       return ;
-                   }else{
-			 		$.messager.confirm('确认?','是否确认删除',function(r){
-			 			if(!r)
-			 				return;
-			 			utils.ajax({
-				 			service:"pcAction",
-				 			method:"deleteQuest",
-				 			params:{
-				 				pkId:pkId
-				 			},
-				 			sucFun:function(mrk,bd,cd){
-								if(mrk){
-									utils.showMsg("删除成功");
-									var rowIndex = $('#query').datagrid('getRowIndex', row);
-									$('#query').datagrid('deleteRow',rowIndex);
-								}else{
-									$.messager.alert('提示',"报告只能作废，不能删除");
-								}
-							}
-				 		});
-			 		});
-			 	}
-			 }
-		}
-
-
-		//作废报告
-		function invalidReport(){
-			var row = $("#query").datagrid('getSelected');
-			if(!row){
-			 	$.messager.alert('提示','请选择一条记录');
-			 	return;
-			 }else{
-		 		var pkId = row.CPkId;
-		 		var lbId = row.CLbId;
-		 		var state = row.CState;
-			 	if(row.CState=="0"){
-			 		$.messager.alert('提示','答题只能删除，不能作废');
-			 		return ;
-			 	}else if(row.CState=="2"){
-			 		$.messager.alert('提示','该报告目前已经处于作废状态');
-			 		return ;
-			 	}else if(row.CState=="3"){
-                   	$.messager.alert('提示','该答题远程评定中不能作废');
-                   	return ;
-               	}else if(row.CState=="4"){
-                       $.messager.alert('提示','光片异常,请重新上传');
-                       return;
-				}else{
-			 		$.messager.confirm('确认?','是否确认作废',function(r){
-			 			if(!r)
-			 				return;
-			 			utils.ajax({
-				 			service:"pcAction",
-				 			method:"invalidReport",
-				 			params:{
-				 				pkId:pkId
-				 			},
-				 			sucFun:function(mrk,bd,cd){
-								if(mrk){
-									utils.showMsg("作废成功");
-
-									row.CState = "2";
-									row.CStateNme = "2";
-									var rowIndex = $('#query').datagrid('getRowIndex', row);
-									$('#query').datagrid('refreshRow',rowIndex);
-								}
-							}
-				 		});
-			 		});
-			 	}
-			 }
-		}
-
-		//恢复报告
-		function recoverReport(){
-			var row = $("#query").datagrid('getSelected');
-			if(!row){
-			 	$.messager.alert('提示','请选择一条记录');
-			 	return;
-			 }else{
-		 		var pkId = row.CPkId;
-		 		var lbId = row.CLbId;
-		 		var state = row.CState;
-			 	if(row.CState=="0" || row.CState=="1"||row.CState=="3"||row.CState=="4"){
-			 		$.messager.alert('提示','只能恢复作废的报告');
-			 		return ;
-			 	}else{
-			 		$.messager.confirm('确认?','是否确认恢复',function(r){
-			 			if(!r)
-			 				return;
-			 			utils.ajax({
-				 			service:"pcAction",
-				 			method:"recoverReport",
-				 			params:{
-				 				pkId:pkId
-				 			},
-				 			sucFun:function(mrk,bd,cd){
-								if(mrk){
-									utils.showMsg("恢复成功");
-
-									row.CState = "1";
-									row.CStateNme = "1";
-									var rowIndex = $('#query').datagrid('getRowIndex', row);
-									$('#query').datagrid('refreshRow',rowIndex);
-								}
-							}
-				 		});
-			 		});
-			 	}
-			 }
-		}
-
-	</script>
+</script>
 	
 </body>
 </html>
