--- a/src/main/resources/templates/report/0809-report.html
+++ b/src/main/resources/templates/report/0809-report.html
@@ -184,8 +184,8 @@
         for (var i = 0; i < CExt1.length; i++) {
             cwcount = cwcount + CExt1[i].cw;
             lbcount = lbcount + CExt1[i].lb;
-            let cw = CExt1[i].cw;
-            let lb = CExt1[i].lb;
+            var cw = CExt1[i].cw;
+            var lb = CExt1[i].lb;
             //大于20的值显示为20
             if(cw>20){
                 cw=20;
