--- a/src/main/resources/templates/report/query.html
+++ b/src/main/resources/templates/report/query.html
@@ -267,7 +267,7 @@
 		}
 		var pkId = row.CPkId;
 		var lbId = row.CLbId;
-		var url = "/report/0809?pkId="+pkId;
+		var url = "/report/"+pkId;
 		var title = row.CChildNme;
 		parent.utils.addTab({
 			"url":url,
